--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -13,25 +13,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/toolbar2"
         android:orientation="vertical">
 
         <!-- Toolbar for Navigation Drawer -->
         <include layout="@layout/toolbar" />
 
+        <!-- Fragment container -->
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
 
+        <!-- Main content layout -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- BarcodeScreen content -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/toolbar"
+                android:layout_below="@id/toolbar2"
                 android:paddingTop="00dp"
                 tools:ignore="NotSibling">
 
@@ -42,13 +46,26 @@
                     android:layout_height="wrap_content"
                     tools:ignore="MissingConstraints">
 
+                    <ImageView
+                        android:id="@+id/imageView18"
+                        android:layout_width="335dp"
+                        android:layout_height="50dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="4dp"
+                        android:elevation="60dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+                        app:srcCompat="@drawable/input_border"
+                        tools:ignore="MissingConstraints" />
+
                     <AutoCompleteTextView
                         android:id="@+id/roomEditText"
                         android:layout_width="0dp"
-                        android:layout_height="42dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_height="38dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/white_input"
+                        android:layout_marginBottom="4dp"
+                        android:background="@null"
                         android:hint="Enter Room Number"
                         android:inputType="text"
                         android:textColor="@color/white"
@@ -56,8 +73,7 @@
                         android:textSize="20dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/changeRoomButton"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintVertical_bias="0.0" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <Button
                         android:id="@+id/changeRoomButton"
@@ -76,7 +92,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
                 <ImageView
                     android:id="@+id/imageView14"
@@ -129,12 +144,13 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/tagRecyclerView"
-                    android:layout_width="360dp"
-                    android:layout_height="520dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_width="362dp"
+                    android:layout_height="496dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
                     android:paddingBottom="200dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.534"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView"
                     tools:ignore="MissingConstraints" />
