--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -53,6 +53,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="4dp"
                         android:elevation="60dp"
+                        android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
                         app:srcCompat="@drawable/input_border"
@@ -65,7 +66,7 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
-                        android:background="@null"
+                        android:background="@drawable/no_border_edit_text"
                         android:hint="Enter Room Number"
                         android:inputType="text"
                         android:textColor="@color/white"
