--- a/app/src/main/res/drawable/button_border.xml
+++ b/app/src/main/res/drawable/button_border.xml
@@ -1,12 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Transparent background -->
     <solid android:color="@android:color/transparent" />
-
-    <!-- Orange border -->
     <stroke
         android:width="4dp"
-        android:color="#ed5f1e" />
-
-    <!-- Optional: Corner radius -->
+        android:color="@android:color/holo_orange_dark" />
     <corners android:radius="8dp"/>
 </shape>
+
+
+
