--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -77,7 +77,7 @@
 
                 <TextView
                     android:id="@+id/dateTimeTextView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="32dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
@@ -88,10 +88,7 @@
                     android:textSize="14sp" />
 
             </LinearLayout>
-
-
         </LinearLayout>
-
 
     </androidx.cardview.widget.CardView>
 
@@ -109,7 +106,7 @@
         <!-- Sync Button with Background Color -->
         <LinearLayout
             android:layout_width="90dp"
-            android:layout_height="85dp"
+            android:layout_height="78dp"
             android:orientation="vertical"
             android:background="@drawable/rounded_sync_background"
             android:gravity="center"
@@ -164,6 +161,5 @@
                 android:gravity="center" />
 
         </LinearLayout>
-
     </LinearLayout>
 </RelativeLayout>
