--- a/app/src/main/res/layout/activity_tag_list.xml
+++ b/app/src/main/res/layout/activity_tag_list.xml
@@ -50,15 +50,17 @@
     <!-- To add a RecyclerView to display all the bagtags -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagRecyclerView"
-        android:layout_width="390dp"
-        android:layout_height="match_parent"
+        android:layout_width="389dp"
+        android:layout_height="560dp"
         android:layout_below="@id/divider"
         android:layout_marginTop="5dp" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="389dp"
+        android:layout_height="695dp">
+
+
 
         <Button
             android:id="@+id/syncAllButton2"
@@ -70,6 +72,7 @@
             app:cornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tagRecyclerView"
             app:layout_constraintVertical_bias="1.0"
