--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,26 @@
+<!--<resources xmlns:tools="http://schemas.android.com/tools">-->
+<!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
+<!--    <style name="Base.Theme.AeroLuggage" parent="Theme.Material3.DayNight.NoActionBar">-->
+<!--        <item name="android:statusBarColor">@color/black</item>-->
+<!--        &lt;!&ndash; Customize your dark theme here. &ndash;&gt;-->
+<!--        &lt;!&ndash; <item name="colorPrimary">@color/my_dark_primary</item> &ndash;&gt;-->
+<!--    </style>-->
+<!--</resources>-->
+
+    <!-- res/values/themes.xml -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.AeroLuggage" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:statusBarColor">@color/black</item>
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-    </style>
+<!-- Base application theme. -->
+<style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- Primary and secondary colors -->
+    <item name="colorPrimary">@color/orange</item>
+    <item name="colorPrimaryVariant">@color/orange</item>
+
+    <!-- Customize other UI elements like status bar color -->
+    <item name="android:statusBarColor">@color/black</item>
+    <!--        <item name="android:navigationBarColor"></item>-->
+
+    <!-- Disable default tinting for buttons, if necessary -->
+    <item name="colorButtonNormal">@color/orange</item>
+    <item name="android:colorAccent">@color/orange</item>
+</style>
 </resources>
