--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.main.MainActivity">
 
     <ImageView
@@ -30,7 +31,7 @@
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="293dp"
-        android:layout_height="76dp"
+        android:layout_height="60dp"
         android:layout_marginTop="148dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
