--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/user_pic"
+        android:src="@drawable/ic_user"
         android:layout_marginBottom="10dp"/>
 
     <TextView
