making the border to appear again when the change room button is clicked

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -22,13 +22,13 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="229dp"
-        android:layout_height="217dp"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView7"
-        app:srcCompat="@drawable/applogo"
+        app:srcCompat="@drawable/app_logo"
         tools:ignore="MissingConstraints" />
 
     <EditText
