--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,11 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="280dp"
-        android:layout_height="296dp"
+        android:layout_width="250dp"
+        android:layout_height="280dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/applogo"
+        app:srcCompat="@drawable/app_logo"
         tools:layout_editor_absoluteY="32dp"
         tools:ignore="MissingConstraints" />
 
