--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -63,7 +63,7 @@
                         android:id="@+id/roomEditText"
                         android:layout_width="0dp"
                         android:layout_height="38dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="15dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
                         android:background="@drawable/no_border_edit_text"
@@ -124,6 +124,7 @@
                     android:id="@+id/tagEditText"
                     android:layout_width="196dp"
                     android:layout_height="38dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@null"
                     android:hint="Enter Bag Tag"
