--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/splash_screen_1" />
 
+
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="240dp"
         android:layout_height="260dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/app_logo"
-        tools:layout_editor_absoluteY="32dp"
-        tools:ignore="MissingConstraints" />
-
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="59dp" />
 
     <ImageView
         android:id="@+id/imageView12"
