--- a/app/src/main/res/layout/activity_room_history_screen.xml
+++ b/app/src/main/res/layout/activity_room_history_screen.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backgroundpic"
+        android:background="@drawable/background_screen"
         tools:context=".ui.screens.RoomHistoryScreen"
         android:padding="12dp">
 
