--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="776"
+    android:viewportHeight="1544">
+  <group android:scaleX="0.30406734"
+      android:scaleY="0.605"
+      android:translateX="270.02185"
+      android:translateY="304.94">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M569.4,4.1C550.9,4.1 487.9,45 458.6,65.4C438.6,71 375.6,77.7 283.3,59.8C191,42 181.7,48.7 186.4,65.4C195.6,82.1 214,117.8 287.9,126.7C380.2,137.9 297.6,190.6 283.3,199.2C246.3,221.5 251,227.1 200.2,227.1C107.9,221.5 135.6,232.7 177.1,277.3C210.3,313 232.5,299.6 269.4,277.3L269.4,277.3C311,249.4 315.6,243.8 352.5,210.4C397,170.1 417.1,199.2 421.7,199.2C426.3,199.2 480,285.4 480,168.3C480,95.8 555.6,76.6 615.5,32C675.5,-12.7 592.5,4.1 569.4,4.1Z"
+        android:fillColor="#ffffff"
+        android:strokeColor="#ffffff"/>
+    <path
+        android:pathData="M125.9,318.5C144.3,301.7 180.2,287.4 153.6,352.1C143.8,375.7 130.8,398.6 117.1,422.7C65.8,512.6 5,619.3 70.5,844.3C84.9,893.6 105.2,936.3 129.2,973.1V1041.5C103.5,1009.9 83.5,978.2 70.5,950.5C18.2,838.7 -81.8,609.4 125.9,318.5ZM221.5,1131.7C186.2,1104.4 154.9,1073 129.2,1041.5V1442.8C129.2,1473.6 149.9,1498.7 175.4,1498.7H193.8V1543.4H295.4V1498.7H609.2V1543.4H710.7V1498.7H729.2C754.7,1498.7 775.4,1473.6 775.4,1442.8V704.4C775.4,642.7 734,592.6 683.1,592.6V1091.4C676.9,1096.3 670.7,1100.9 664.6,1105.3V592.6H618.4V514.3C618.4,483.4 597.8,458.3 572.3,458.3H332.3C306.8,458.3 286.1,483.4 286.1,514.3V592.6H240V1091.3C233.8,1086.6 227.6,1081.7 221.5,1076.7V1045.6V592.6C170.6,592.6 129.2,642.7 129.2,704.4V973.1C156.5,1014.9 188.4,1049 221.5,1076.7V1131.7ZM240,1145.2V1498.7H221.5V1131.7C227.6,1136.3 233.7,1140.8 240,1145.2ZM664.6,1118.5V1105.3C563.5,1177.5 466.6,1183.9 421.3,1174.3C377.2,1166.9 307.4,1142 240,1091.3V1145.2C293.8,1182.8 355.8,1209.8 421.3,1213.4C514.2,1218.5 599.4,1172.7 664.6,1118.5ZM664.6,1118.5V1498.7H683.1V1102.5C722.9,1066.5 753.7,1028.7 772,1000.9C743.1,1037.9 713,1067.7 683.1,1091.4V1102.5C677.1,1107.9 670.9,1113.3 664.6,1118.5Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
