--- a/app/src/main/res/layout/activity_barcode_screen.xml
+++ b/app/src/main/res/layout/activity_barcode_screen.xml
@@ -123,9 +123,10 @@
 
                 <EditText
                     android:id="@+id/tagEditText"
-                    android:layout_width="196dp"
-                    android:layout_height="38dp"
-                    android:layout_marginBottom="13dp"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@null"
                     android:hint="Enter Bag Tag"
                     android:textColor="@color/white"
@@ -133,8 +134,9 @@
                     android:textSize="20dp"
                     app:layout_constraintBottom_toTopOf="@+id/textView"
                     app:layout_constraintEnd_toEndOf="@+id/imageView14"
-                    app:layout_constraintHorizontal_bias="0.16"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageView14"
+                    app:layout_constraintTop_toTopOf="@+id/imageView14"
                     app:srcCompat="@drawable/white_input"
                     tools:ignore="UnknownIdInLayout" />
 
@@ -166,7 +168,7 @@
                     android:layout_width="363dp"
                     android:layout_height="480dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="18dp"
                     android:layout_marginEnd="10dp"
                     android:paddingBottom="200dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -188,7 +190,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="MissingConstraints" />
 
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </RelativeLayout>
@@ -201,6 +202,8 @@
         android:layout_gravity="start"
         android:background="@drawable/drawer_background"
         app:menu="@menu/side_drawer"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
         app:headerLayout="@layout/header" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
