--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,58 +5,57 @@
     android:layout_width="283dp"
     android:layout_height="200dp"
     android:padding="20dp"
-    android:background="@drawable/header_photo"
+    android:background="@drawable/header_background"
     android:gravity="bottom"
     android:orientation="vertical">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="270dp"
-        android:layout_height="115dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp">
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="270dp"-->
+<!--        android:layout_height="115dp"-->
+<!--        android:layout_marginStart="0dp"-->
+<!--        android:layout_marginTop="0dp">-->
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="60dp"-->
 
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.859"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/small_logo"
-            tools:ignore="MissingConstraints" />
+<!--            android:layout_marginBottom="8dp"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/imageView4"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.859"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:srcCompat="@drawable/small_logo"-->
+<!--            tools:ignore="MissingConstraints" />-->
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="176dp"
-            android:layout_height="29dp"
-            android:src="@drawable/aeroluggage_logo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602"
-            tools:ignore="MissingConstraints" />
+<!--        <ImageView-->
+<!--            android:id="@+id/logo"-->
+<!--            android:layout_width="176dp"-->
+<!--            android:layout_height="29dp"-->
+<!--            android:src="@drawable/aeroluggage_logo"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.0"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.602"-->
+<!--            tools:ignore="MissingConstraints" />-->
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="273dp"
-            android:layout_height="4dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/line"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="MissingConstraints" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView4"-->
+<!--            android:layout_width="273dp"-->
+<!--            android:layout_height="4dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginBottom="20dp"-->
+<!--            android:src="@drawable/line"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/logo"-->
+<!--            app:layout_constraintVertical_bias="1.0"-->
+<!--            tools:ignore="MissingConstraints" />-->
+<!--        -->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <TextView
         android:id="@+id/name"
